--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,7 @@
 				<artifactId>maven-compat</artifactId>
 				<version>3.8.1</version>
 			</dependency>
+			<!-- deploy时需要
 			<dependency>
 				<groupId>org.apache.maven.resolver</groupId>
 				<artifactId>maven-resolver-connector-basic</artifactId>
@@ -130,11 +131,7 @@
 				<artifactId>maven-resolver-transport-http</artifactId>
 				<version>1.7.1</version>
 			</dependency>
-			<dependency>
-				<groupId>org.apache.maven.shared</groupId>
-				<artifactId>maven-invoker</artifactId>
-				<version>3.1.0</version>
-			</dependency>
+			-->
 			<dependency>
 				<groupId>com.google.cloud.tools</groupId>
 				<artifactId>jib-core</artifactId>
