--- a/dhorse-api/pom.xml
+++ b/dhorse-api/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.dhorse</groupId>
 		<artifactId>dhorse-parent</artifactId>
-		<version>0.10.1-beta</version>
+		<version>0.11.0</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>dhorse-api</artifactId>
