--- a/dhorse-infrastructure/src/main/resources/maven/pom.xml
+++ b/dhorse-infrastructure/src/main/resources/maven/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>org.dhorse</groupId>
 	<artifactId>dhorse-tmp</artifactId>
-	<version>0.10.1-beta</version>
+	<version>0.11.0</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
