--- a/dhorse-rest/pom.xml
+++ b/dhorse-rest/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.dhorse</groupId>
 		<artifactId>dhorse-parent</artifactId>
-		<version>0.10.1-beta</version>
+		<version>0.11.0</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>dhorse-rest</artifactId>
