--- a/dhorse-rest/src/main/resources/application-private.yml
+++ b/dhorse-rest/src/main/resources/application-private.yml
@@ -1,4 +1,4 @@
-version: 0.10.1-beta
+version: 0.11.0
 spring.jackson.default-property-inclusion: non_null
 spring.jackson.date-format: yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone: GMT+8
