--- a/dhorse-rest/pom.xml
+++ b/dhorse-rest/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.dhorse</groupId>
 		<artifactId>dhorse-parent</artifactId>
-		<version>0.12.0</version>
+		<version>0.12.01</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>dhorse-rest</artifactId>
@@ -77,7 +77,7 @@
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>3.3.0</version>
 				<configuration>
-					<finalName>dhorse-${project.version}-x64_bin</finalName>
+					<finalName>dhorse-v${project.version}-bin</finalName>
 					<appendAssemblyId>true</appendAssemblyId>
 					<descriptors>
 						<descriptor>src/main/resources/assemble/unix.xml</descriptor>
