--- a/dhorse-agent/pom.xml
+++ b/dhorse-agent/pom.xml
@@ -11,6 +11,15 @@
 	<artifactId>dhorse-agent</artifactId>
 	<packaging>jar</packaging>
 	
+	<dependencies>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.36</version>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
+	
 	<build>
 		<plugins>
 			<plugin>
@@ -20,7 +29,7 @@
 				<configuration>
 					<archive>
 						<manifestEntries>
-							<Premain-Class>org.dhorse.agent.JvmInfoAgent</Premain-Class>
+							<Premain-Class>org.dhorse.agent.JvmMetricsAgent</Premain-Class>
 						</manifestEntries>
 					</archive>
 				</configuration>
