完善jvm指标收集功能

--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
 				<version>4.0.3</version>
 			</dependency>
 			<dependency>
+				<groupId>org.xerial</groupId>
+				<artifactId>sqlite-jdbc</artifactId>
+				<version>3.41.2.2</version>
+			</dependency>
+			<dependency>
 				<groupId>com.h2database</groupId>
 				<artifactId>h2</artifactId>
 				<version>2.1.214</version>
