优化弹窗位置

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,9 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>11</java.version>
-		<!--<java.version>1.8</java.version>-->
+		<!--
+		<java.version>1.8</java.version>
+		-->
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<project.version>1.2.0</project.version>
