修改打包方式

--- a/dhorse-infrastructure/pom.xml
+++ b/dhorse-infrastructure/pom.xml
@@ -48,10 +48,12 @@
 			<groupId>org.xerial</groupId>
 			<artifactId>sqlite-jdbc</artifactId>
 		</dependency>
+		<!--
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
+		-->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -86,6 +88,12 @@
 			<groupId>org.gitlab4j</groupId>
 			<artifactId>gitlab4j-api</artifactId>
 		</dependency>
+		<!--
+		<dependency>
+			<groupId>com.aliyun</groupId>
+			<artifactId>cr20181201</artifactId>
+		</dependency>
+		-->
 		<dependency>
 			<groupId>com.google.cloud.tools</groupId>
 			<artifactId>jib-core</artifactId>
