--- a/pom.xml
+++ b/pom.xml
@@ -104,11 +104,13 @@
 				<artifactId>sqlite-jdbc</artifactId>
 				<version>3.41.2.2</version>
 			</dependency>
+			<!--
 			<dependency>
 				<groupId>com.h2database</groupId>
 				<artifactId>h2</artifactId>
 				<version>2.1.214</version>
 			</dependency>
+			-->
 			<dependency>
 				<groupId>mysql</groupId>
 				<artifactId>mysql-connector-java</artifactId>
@@ -173,6 +175,11 @@
 			    <groupId>com.esotericsoftware</groupId>
 			    <artifactId>reflectasm</artifactId>
 			    <version>1.11.9</version>
+			</dependency>
+			<dependency>
+				<groupId>com.aliyun</groupId>
+				<artifactId>cr20181201</artifactId>
+				<version>1.0.11</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
