--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.dhorse</groupId>
 	<artifactId>dhorse-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>1.3.0</version>
+	<version>1.4.0</version>
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -16,7 +16,7 @@
 		<java.version>1.8</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
-		<project.version>1.3.0</project.version>
+		<project.version>1.4.0</project.version>
 		<spring.version>5.3.24</spring.version>
 		<springboot.version>2.7.6</springboot.version>
 	</properties>
@@ -140,6 +140,11 @@
 				<groupId>io.kubernetes</groupId>
 				<artifactId>client-java</artifactId>
 				<version>18.0.0</version>
+			</dependency>
+			<dependency>
+				<groupId>io.fabric8</groupId>
+				<artifactId>kubernetes-client</artifactId>
+				<version>6.8.0</version>
 			</dependency>
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
