--- a/dhorse-infrastructure/pom.xml
+++ b/dhorse-infrastructure/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.dhorse</groupId>
 		<artifactId>dhorse-parent</artifactId>
-		<version>1.3.0</version>
+		<version>1.4.0</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>dhorse-infrastructure</artifactId>
@@ -48,12 +48,8 @@
 			<groupId>org.xerial</groupId>
 			<artifactId>sqlite-jdbc</artifactId>
 		</dependency>
-		<!--
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-		</dependency>
-		-->
+		<!-- <dependency> <groupId>com.h2database</groupId> <artifactId>h2</artifactId> 
+			</dependency> -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -66,12 +62,8 @@
 			<groupId>org.gitlab4j</groupId>
 			<artifactId>gitlab4j-api</artifactId>
 		</dependency>
-		<!--
-		<dependency>
-			<groupId>com.aliyun</groupId>
-			<artifactId>cr20181201</artifactId>
-		</dependency>
-		-->
+		<!-- <dependency> <groupId>com.aliyun</groupId> <artifactId>cr20181201</artifactId> 
+			</dependency> -->
 		<dependency>
 			<groupId>com.google.cloud.tools</groupId>
 			<artifactId>jib-core</artifactId>
@@ -89,6 +81,10 @@
 		<dependency>
 			<groupId>io.kubernetes</groupId>
 			<artifactId>client-java</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.fabric8</groupId>
+			<artifactId>kubernetes-client</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
