线程池可配置化

--- a/dhorse-rest/src/main/resources/dhorse.yml
+++ b/dhorse-rest/src/main/resources/dhorse.yml
@@ -10,18 +10,28 @@
 #服务端口，默认8100
 #server.port: 8100
 
-#系统数据文件位置，默认为安装目录
+#系统数据文件位置，默认为dhorse的安装目录
 #data.path: /usr/dhorse
 
-#系统日志文件位置，默认为安装目录
-#log.path: /tmp/logs
+#系统日志文件位置，默认为dhorse的安装目录
+#log.path: /tmp/log
 
 #保留日志天数，默认7天
 #log.max.history: 7
 
+#构建版本线程池核心线程数
+#thread_pool.build.core: 4
+#构建版本线程池最大线程数
+#thread_pool.build.max: 8
+
+#部署应用线程池核心线程数
+#thread_pool.deployment.core: 4
+#部署应用线程池最大线程数
+#thread_pool.deployment.max: 8
+
 
 #====================================================================================================
-# Mysql配置
+# Mysql
 #====================================================================================================
 #如果启用，则优先使用Mysql
 #mysql.enable: true
