--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,16 @@
 				<artifactId>cr20181201</artifactId>
 				<version>1.0.11</version>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-compress</artifactId>
+				<version>1.21</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>2.13.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<build>
