--- a/dhorse-rest/src/main/resources/dhorse.yml
+++ b/dhorse-rest/src/main/resources/dhorse.yml
@@ -8,7 +8,7 @@
 # Common
 #====================================================================================================
 #服务端口，默认8100
-#server.port: 8100
+server.port: 8100
 
 #系统数据文件位置，默认为dhorse的安装目录
 #data.path: /usr/dhorse
@@ -34,12 +34,12 @@
 # Mysql
 #====================================================================================================
 #如果启用，则优先使用Mysql
-#mysql.enable: true
+mysql.enable: true
 #需要手动创建dhorse库，DHorse在启动时会自动创建表
-#mysql.url: jdbc:mysql://localhost:3306/dhorse?useUnicode=true&characterEncoding=UTF-8&rewriteBatchedStatements=true&allowMultiQueries=true
+mysql.url: jdbc:mysql://192.168.223.20:3306/dhorse?useUnicode=true&characterEncoding=UTF-8&rewriteBatchedStatements=true&allowMultiQueries=true
 #该账号需要具有建表权限
-#mysql.user: username
-#mysql.password: password
+mysql.user: root
+mysql.password: root
 
 
 
