--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,11 @@
 				<artifactId>commons-io</artifactId>
 				<version>2.13.0</version>
 			</dependency>
+			<dependency>
+				<groupId>org.jasig.cas.client</groupId>
+				<artifactId>cas-client-core</artifactId>
+				<version>3.6.4</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<build>
