--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<project.version>1.4.2</project.version>
-		<spring.version>5.3.24</spring.version>
-		<springboot.version>2.7.6</springboot.version>
+		<spring.version>5.3.30</spring.version>
+		<springboot.version>2.7.17</springboot.version>
 	</properties>
 	
 	<modules>
@@ -82,7 +82,7 @@
 			<dependency>
 				<groupId>org.springframework.security</groupId>
 				<artifactId>spring-security-core</artifactId>
-				<version>5.8.0</version>
+				<version>5.8.8</version>
 			</dependency>
 			<dependency>
 				<groupId>org.mybatis</groupId>
@@ -114,12 +114,12 @@
 			<dependency>
 				<groupId>mysql</groupId>
 				<artifactId>mysql-connector-java</artifactId>
-				<version>8.0.31</version>
+				<version>8.0.33</version>
 			</dependency>
 			<dependency>
 				<groupId>com.baomidou</groupId>
 				<artifactId>mybatis-plus</artifactId>
-				<version>3.5.2</version>
+				<version>3.5.4</version>
 			</dependency>
 			<dependency>
 				<groupId>org.gitlab4j</groupId>
@@ -134,7 +134,7 @@
 			<dependency>
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
-				<version>31.1-jre</version>
+				<version>32.1.3-jre</version>
 			</dependency>
 			<dependency>
 				<groupId>io.kubernetes</groupId>
@@ -149,12 +149,12 @@
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-classic</artifactId>
-				<version>1.2.4</version>
+				<version>1.2.12</version>
 			</dependency>
 			<dependency>
 				<groupId>org.codehaus.janino</groupId>
 				<artifactId>janino</artifactId>
-				<version>3.1.6</version>
+				<version>3.1.10</version>
 			</dependency>
 			<dependency>
 			    <groupId>com.esotericsoftware</groupId>
@@ -198,16 +198,32 @@
 					<encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
 			</plugin>
+			
+			<!--
+			<plugin>
+				<groupId>org.owasp</groupId>
+				<artifactId>dependency-check-maven</artifactId>
+				<version>8.4.2</version>
+				<configuration>
+					<autoUpdate>true</autoUpdate>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			
 			<plugin>
 				<groupId>com.github.shalousun</groupId>
 				<artifactId>smart-doc-maven-plugin</artifactId>
 				<version>2.3.5</version>
 				<configuration>
 					<configFile>./src/main/resources/smart-doc.json</configFile>
-					<!--指定项目名称 -->
 					<projectName>dhorse</projectName>
 				</configuration>
-				<!--
 				<executions>
 					<execution>
 						<phase>compile</phase>
@@ -216,8 +232,8 @@
 						</goals>
 					</execution>
 				</executions>
-				-->
 			</plugin>
+			-->
 		</plugins>
 	</build>
 </project>
