--- a/dhorse-infrastructure/pom.xml
+++ b/dhorse-infrastructure/pom.xml
@@ -106,6 +106,10 @@
 			<groupId>org.jasig.cas.client</groupId>
 			<artifactId>cas-client-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.github.biezhi</groupId>
+			<artifactId>TinyPinyin</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
