--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,11 @@
 				<artifactId>cas-client-core</artifactId>
 				<version>3.6.4</version>
 			</dependency>
+			<dependency>
+				<groupId>io.github.biezhi</groupId>
+				<artifactId>TinyPinyin</artifactId>
+				<version>2.0.3.RELEASE</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<build>
