注释官方k8s客户端

--- a/dhorse-infrastructure/pom.xml
+++ b/dhorse-infrastructure/pom.xml
@@ -77,6 +77,7 @@
 		<dependency>
 			<groupId>io.kubernetes</groupId>
 			<artifactId>client-java</artifactId>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.fabric8</groupId>
