支持自动部署环境

--- a/dhorse-application/pom.xml
+++ b/dhorse-application/pom.xml
@@ -17,5 +17,9 @@
 			<groupId>org.dhorse</groupId>
 			<artifactId>dhorse-infrastructure</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+		</dependency>
 	</dependencies>
 </project>
