--- a/dhorse-infrastructure/pom.xml
+++ b/dhorse-infrastructure/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.dhorse</groupId>
 		<artifactId>dhorse-parent</artifactId>
-		<version>1.5.1</version>
+		<version>1.6.0</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>dhorse-infrastructure</artifactId>
@@ -110,6 +110,11 @@
 		<dependency>
 			<groupId>io.github.biezhi</groupId>
 			<artifactId>TinyPinyin</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.aliyun</groupId>
+			<artifactId>alibabacloud-devops20210625</artifactId>
+			<version>4.0.38</version>
 		</dependency>
 	</dependencies>
 	<build>
